DBU-652: address Pyth adapter review feedback
